fixed issue with projects alignment

--- a/source/scss/_fullpage_section.scss
+++ b/source/scss/_fullpage_section.scss
@@ -16,8 +16,7 @@
 
   p {
     width: 70%;
-    margin: 0 auto 10px;
-    text-align: justify;
+    margin: 0 auto 20px;
     line-height: 28px;
     letter-spacing: 0.02em;
   }
